--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,8 +22,8 @@ build:
     - tar xvf build/distributions/owl-*.tar -C build --strip-components=1
     - ltlcross --determinize --stop-on-error --grind=debug.ltl --timeout=300 -F "formulas/base.ltl" "$SPOT_TOOL" "$LTL_TOOL"
     - ltlcross --determinize --stop-on-error --grind=debug.ltl --timeout=300 -F "formulas/regressions.ltl" "$SPOT_TOOL" "$LTL_TOOL"
-    - ltlcross --determinize --stop-on-error --grind=debug.ltl --timeout=300 -F "formulas/check.ltl" "$SPOT_TOOL" "$LTL_TOOL"
-    - randltl --seed=12345 -n 19 a b c d e f --tree-size=5..25 | ltlfilt --nnf | ltlcross --determinize --stop-on-error --grind=debug.ltl --timeout=300 "$SPOT_TOOL" "$LTL_TOOL"
+    - ltlcross --stop-on-error --grind=debug.ltl --timeout=300 -F "formulas/check.ltl" "$SPOT_TOOL" "$LTL_TOOL"
+    - randltl --seed=12345 -n 19 a b c d e f --tree-size=5..25 | ltlfilt --nnf | ltlcross --stop-on-error --grind=debug.ltl --timeout=300 "$SPOT_TOOL" "$LTL_TOOL"
   artifacts:
     paths:
     - debug.ltl
