--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ apply plugin: 'idea'
 apply plugin: 'application'
 
 project.group = 'de.tum.in'
-project.version = '1.0.0'
+project.version = '1.1.0-SNAPSHOT'
 
 mainClassName = 'enteEnteEnteEnteEnteGANS'
 
