--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -134,3 +134,35 @@ test:ltl2det-parallel:
   variables:
     LTL_TOOL: "{ltl2da} build/bin/ltl2da --parallel %f >%O"
   <<: *ltlcross_template
+
+# FGX to DGA translations
+
+test:fgx2dga-fallback:
+  variables:
+    LTL_TOOL: "{fgx2dga} build/bin/fgx2dga --fallback %f >%O"
+  script: 
+    - JAVA_OPTS="-enableassertions"
+    - SPOT_TOOL="{spot} ltl2tgba -H -f %f >%O"
+    - ./gradlew --no-daemon distTar
+    - tar xvf build/distributions/owl-*.tar -C build --strip-components=1
+    - ltlcross --stop-on-error --grind=debug.ltl --timeout=300 -F "formulas/fgx.ltl" "$SPOT_TOOL" "$LTL_TOOL"
+  artifacts:
+    paths:
+    - debug.ltl
+    when: on_failure
+    expire_in: 1 week
+
+test:fgx2dga:
+  variables:
+    LTL_TOOL: "{fgx2dga} build/bin/fgx2dga %f >%O"
+  script: 
+    - JAVA_OPTS="-enableassertions"
+    - SPOT_TOOL="{spot} ltl2tgba -H -f %f >%O"
+    - ./gradlew --no-daemon distTar
+    - tar xvf build/distributions/owl-*.tar -C build --strip-components=1
+    - ltlcross --stop-on-error --grind=debug.ltl --timeout=300 -F "formulas/fgx.ltl" "$SPOT_TOOL" "$LTL_TOOL"
+  artifacts:
+    paths:
+    - debug.ltl
+    when: on_failure
+    expire_in: 1 week
